creating a UI for game results

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
       </div>
 
       <div class="game_outcome">
-        <span class="outcome"></span>
+        <h2 class="result"></h2>
+        <h2 class="outcome"></h2>
       </div>
     </div>
   </main>
