UI updates for final results

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <div class="game_outcome">
         <h2 class="result"></h2>
         <h2 class="outcome"></h2>
+        <h2 class="final_outcome"></h2>
       </div>
     </div>
   </main>
